--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
 body{
-    background-color: #383d58;
+    background-color: #cc327f;
+    a {
+        color: #010000; hotpink
+      }
 color: white;
 }
 
 .cabeçalho-imagem {
- width: 20;
+ width: 10  ;
  display: flex;
  justify-content: space-around;
  0
 }
- 
+}
